# TensorRT-CenterNet

./: CMakeLists.txt  README.md  calib_img_list.txt  eval_coco.py  run.py
example/: CMakeLists.txt  buildEngine.cpp  runDet.cpp
include/: argparse.h  ctdetConfig.h  ctdetLayer.h  ctdetNet.h  entroyCalibrator.h  python_api.h  utils.h
onnx-tensorrt/: CMakeLists.txt  DCNv2.cpp  DCNv2.hpp  README.md  builtin_op_importers.cpp  builtin_plugins.cpp  dcn_v2_im2col_cuda.cu  dcn_v2_im2col_cuda.h
readme/: ctdet2onnx.md
readme/dcn/: __init__.py
src/: CMakeLists.txt  argparse.cpp  ctdetLayer.cu  ctdetNet.cpp  entroyCalibrator.cpp  python_api.cpp  utils.cpp
